updated prison question and fixed spacing bug

--- a/crt_portal/static/sass/custom/form.scss
+++ b/crt_portal/static/sass/custom/form.scss
@@ -49,6 +49,7 @@ form#report-form {
 
   .other-class-option {
     margin-left: 2rem;
+    padding-top: 2.5rem;
 
     ul > li:last-child {
       height: 25px;
